--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,8 @@ python-*-docs-html
 /.cask/
 
 # Private directory
-private/
-!private/README.md
-!private/snippets/README.md
-!private/local/README.md
+#private/
+#!private/README.md
+#!private/snippets/README.md
+#!private/local/README.md
 /games/
